# assistente-copel

./: README.md  assistente_copel.py  pyproject.toml
